--- a/index.html
+++ b/index.html
@@ -272,8 +272,10 @@ $('.family').bind('showoff:next', function(e) {
 <p><code>var cicle = new google.maps.Circle({...});</code></p>
 
 <h3>See them all at <a href="http://code.google.com/intl/sv-SE/apis/maps/documentation/javascript/overlays.html">Google Maps Javascript API V3 Overlays</a></h3></div>
-</div><div class="slide" data-transition="none"><div class="content full-page" ref="style/01_style/1">
-<h1>Styling Google maps</h1>
+</div><div class="slide" data-transition="none"><div class="content center light-on-dark" ref="style/01_style/1">
+<p><img src="./file/style/styling.jpg" width="1229" height="768" alt="background"/></p>
+
+<h1>3. Styling Google maps</h1>
 
 <h3>Unstyled is pretty boring...</h3></div>
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="style/01_style/2">
@@ -457,7 +459,7 @@ MyMarker.prototype.draw = function() { ... };</code></pre>
 </div><div class="slide" data-transition="none"><div class="content center light-on-dark" ref="performance/01_performance/1">
 <p><img src="./file/performance/performance.jpg" width="1200" height="797" alt="background"/></p>
 
-<h1>3. Performance</h1>
+<h1>4. Performance</h1>
 
 <!--
 Image cred to:
@@ -875,7 +877,7 @@ Render GIFs for IE, instead of alpha PNGs
 </div><div class="slide" data-transition="none"><div class="content center light-on-dark" ref="wrapup/01_wrapup/1">
 <p><img src="./file/wrapup/cool.jpg" width="1280" height="960" alt="background"/></p>
 
-<h1>4. Cool Examples</h1></div>
+<h1>5. Cool Examples</h1></div>
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="wrapup/01_wrapup/2">
 <h1><a href="http://bit.ly/fxBpw0">3D-maps, sweded?</a></h1></div>
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="wrapup/01_wrapup/3">
