--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
 
 <div id="slides" class="offscreen" style="display:none;">
 <div class="slide" data-transition="none"><div class="content center light-on-dark" ref="popdevelop/01_popdevelop/1">
-<p><img src="google-maps-intro.jpg" alt="background"/></p>
+<p><img src="./file/popdevelop/google-maps-intro.jpg" width="1280" height="800" alt="background"/></p>
 
 <h1>Google Maps on the web</h1>
 
 <h3>by Popdevelop 13/4 - 2011</h3></div>
 </div><div class="slide" data-transition="none"><div class="content center light-on-dark popdevelop" ref="popdevelop/01_popdevelop/2">
-<p><img src="popdevelop.jpg" alt="background"/></p>
+<p><img src="./file/popdevelop/popdevelop.jpg" width="864" height="610" alt="background"/></p>
 
 <h1>1. Popdevelop</h1></div>
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="popdevelop/01_popdevelop/3">
@@ -113,7 +113,7 @@
 </ul>
 </div>
 </div><div class="slide" data-transition="none"><div class="content center light-on-dark" ref="intro/01_slide/1">
-<p><img src="google-maps-intro.jpg" alt="background"/></p>
+<p><img src="./file/intro/google-maps-intro.jpg" width="1280" height="800" alt="background"/></p>
 
 <h1>2. Google maps</h1></div>
 </div><div class="slide" data-transition="none"><div class="content full-page family" ref="intro/01_slide/2">
@@ -195,7 +195,7 @@ $('.family').bind('showoff:next', function(e) {
 <h2>Image tiles</h2>
 
 <ul>
-<li>Bitmap images <img src="tiles.png" alt="Tiles"/></li>
+<li>Bitmap images <img src="./file/intro/tiles.png" width="200" height="200" alt="Tiles"/></li>
 <li>For all zoom levels</li>
 <li>Non-interactive</li>
 </ul>
@@ -255,9 +255,9 @@ $('.family').bind('showoff:next', function(e) {
 </div><div class="slide" data-transition="none"><div class="content full-page features" ref="intro/01_slide/8">
 <h1>Some Google maps features</h1>
 
-<p><img src="google-marker.jpeg" alt="Marker"/>
-<img src="infowindow.png" alt="Infowindow"/>
-<img src="polygon.png" alt="Polygons"/></p>
+<p><img src="./file/intro/google-marker.jpeg" width="70" height="61" alt="Marker"/>
+<img src="./file/intro/infowindow.png" width="100" height="70" alt="Infowindow"/>
+<img src="./file/intro/polygon.png" width="100" height="66" alt="Polygons"/></p>
 
 <h3>Marker</h3>
 
@@ -273,7 +273,7 @@ $('.family').bind('showoff:next', function(e) {
 
 <h3>See them all at <a href="http://code.google.com/intl/sv-SE/apis/maps/documentation/javascript/overlays.html">Google Maps Javascript API V3 Overlays</a></h3></div>
 </div><div class="slide" data-transition="none"><div class="content center light-on-dark" ref="style/01_style/1">
-<p><img src="styling.jpg" alt="background"/></p>
+<p><img src="./file/style/styling.jpg" width="1229" height="768" alt="background"/></p>
 
 <h1>3. Styling Google maps</h1>
 
@@ -284,7 +284,7 @@ $('.family').bind('showoff:next', function(e) {
 <p>By using Googles <a href="http://code.google.com/intl/sv-SE/apis/maps/documentation/javascript/overlays.html#SubClassing">Custom Overlay Class</a>
 we can create our own marker using any HTML/CSS we want</p>
 
-<p><img src="custom_marker.png" alt="Custom marker"/></p>
+<p><img src="./file/style/custom_marker.png" width="426" height="311" alt="Custom marker"/></p>
 
 <h3>Example from <a href="http://taglaget.nu">taglaget.nu</a></h3></div>
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="style/01_style/3">
@@ -400,7 +400,7 @@ MyMarker.prototype.draw = function() { ... };</code></pre>
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="style/01_style/7">
 <h1>Custom Static Tiles</h1>
 
-<p><img src="customtiles.png" alt="Custom Tiles"/></p>
+<p><img src="./file/style/customtiles.png" width="748" height="448" alt="Custom Tiles"/></p>
 
 <p><a href="http://demo.mapbox.com/dc-nightvision.html">Custom tiles with Mapbox</a></p></div>
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="style/01_style/8">
@@ -457,7 +457,7 @@ MyMarker.prototype.draw = function() { ... };</code></pre>
 </script>
 </div>
 </div><div class="slide" data-transition="none"><div class="content center light-on-dark" ref="performance/01_performance/1">
-<p><img src="performance.jpg" alt="background"/></p>
+<p><img src="./file/performance/performance.jpg" width="1200" height="797" alt="background"/></p>
 
 <h1>4. Performance</h1>
 
@@ -470,7 +470,8 @@ http://thefixedgear.wordpress.com/
 <h1>Why?</h1>
 
 <p><button id="addmarkers">Add 100 Markers</button>
-<button id="clearmarkers">Clear Markers</button></p>
+<button id="clearmarkers">Clear Markers</button>
+<span class="countmarkers"/></p>
 
 <div class="gmaps">
   <div id="perf1_canvas">
@@ -493,6 +494,7 @@ http://thefixedgear.wordpress.com/
   });
 
   var markers = [];
+  $('.countmarkers').html(markers.length + ' markers');
   google.maps.event.addListenerOnce(map, 'bounds_changed', function() {
     $('#addmarkers').click(function() {
       var bounds = map.getBounds();
@@ -506,14 +508,17 @@ http://thefixedgear.wordpress.com/
         var marker = new google.maps.Marker({position:point, map:map});
         markers.push(marker);
       }
+      $('.countmarkers').html(markers.length + ' markers');
     });
   });
   $('#clearmarkers').click(function() {
     var i = markers.length;
     while(i--){
       markers[i].setMap(null);
+      delete markers[i];
     }
     markers = [];
+    $('.countmarkers').html(markers.length + ' markers');
   });
   $('.googlemap_perf1').bind("showoff:show", function() {
     google.maps.event.trigger(map, 'resize');
@@ -527,7 +532,7 @@ http://thefixedgear.wordpress.com/
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="performance/01_performance/3">
 <h1>Knuth?</h1>
 
-<p><img src="rootevil.jpg" alt="Root of all evil"/></p></div>
+<p><img src="./file/performance/rootevil.jpg" width="564" height="417" alt="Root of all evil"/></p></div>
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="performance/01_performance/4">
 <h1>Measure it</h1>
 
@@ -549,8 +554,8 @@ http://thefixedgear.wordpress.com/
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="performance/01_performance/6">
 <h1>Clustering</h1>
 
-<p><img src="uncluster.jpg" alt="Before Cluster"/>
-<img src="cluster2.jpg" alt="After Cluster"/></p></div>
+<p><img src="./file/performance/uncluster.jpg" width="320" height="240" alt="Before Cluster"/>
+<img src="./file/performance/cluster2.jpg" width="320" height="240" alt="After Cluster"/></p></div>
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="performance/01_performance/7">
 <h1>Clustering</h1>
 
@@ -565,7 +570,7 @@ http://thefixedgear.wordpress.com/
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="performance/01_performance/8">
 <h1>MarkerClusterer &amp; MarkerManager</h1>
 
-<p><img src="markerclusterer.jpg" alt="MarkerClusterer"/></p>
+<p><img src="./file/performance/markerclusterer.jpg" width="578" height="215" alt="MarkerClusterer"/></p>
 
 <p><a href="http://google-maps-utility-library-v3.googlecode.com/svn/tags/markermanager/1.0/docs/reference.html">MarkerManger by google</a>
 <a href="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerclusterer/examples/advanced_example.html">MarkerClusterer by google</a></p></div>
@@ -573,7 +578,8 @@ http://thefixedgear.wordpress.com/
 <h1>MarkerClusterer</h1>
 
 <p><button id="addmarkerscluster">Add 100 Markers with MarkerClusterer</button>
-<button id="clearmarkerscluster">Clear Markers</button></p>
+<button id="clearmarkerscluster">Clear Markers</button>
+<span class="count"/></p>
 
 <div class="gmaps">
   <div id="perf2_canvas">
@@ -597,6 +603,7 @@ http://thefixedgear.wordpress.com/
 
 
   var markerCluster = new MarkerClusterer(map);
+  $('.count').html(markerCluster.getTotalMarkers() + ' markers, ' + markerCluster.getTotalClusters() + ' clusters');
   google.maps.event.addListenerOnce(map, 'bounds_changed', function() {
     $('#addmarkerscluster').click(function() {
       var markers = [];
@@ -612,11 +619,13 @@ http://thefixedgear.wordpress.com/
         markers.push(marker);
       }
       markerCluster.addMarkers(markers);
+      $('.count').html(markerCluster.getTotalMarkers() + ' markers, ' + markerCluster.getTotalClusters() + ' clusters');
       markers = [];
     });
   });
   $('#clearmarkerscluster').click(function() {
     markerCluster.clearMarkers();
+    $('.count').html(markerCluster.getTotalMarkers() + ' markers, ' + markerCluster.getTotalClusters() + ' clusters');
   });
 
   $('.googlemap_perf2').bind("showoff:show", function() {
@@ -641,18 +650,18 @@ http://thefixedgear.wordpress.com/
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="performance/01_performance/11">
 <h1>Data simplification</h1>
 
-<p><img src="line.gif" alt="Simplify polylines"/></p>
+<p><img src="./file/performance/line.gif" width="439" height="255" alt="Simplify polylines"/></p>
 
 <ul>
 <li>Simplify data</li>
-<li>Encoded polylines</li>
+<li><a href="http://code.google.com/intl/sv/apis/maps/documentation/utilities/polylinealgorithm.html">Encoded polylines</a></li>
 </ul>
 
 
 <!-- Image cred to webhelp.esri.com -->
 </div>
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="performance/01_performance/12">
-<h1>Add Layers</h1>
+<h1>Layers</h1>
 
 <pre class="sh_javascript"><code>var lay1 = new google.maps.KmlLayer('url/data.kmz');
 lay1.setMap(map);
@@ -662,17 +671,11 @@ lay2.setQuery("SELECT * FROM " + id);
 lay2.setMap(map);</code></pre>
 
 <ul>
-<li>Generated tiles</li>
 <li>Google Fusion Tables</li>
 <li>KML</li>
 </ul>
 </div>
-</div><div class="slide" data-transition="none"><div class="content full-page" ref="performance/01_performance/13">
-<h1><a href="http://maps.google.com/help/maps/elections/index.html#fundrace">Custom Tiles</a></h1>
-
-<iframe title="Us elections" width="800" height="410" src="http://maps.google.com/help/maps/elections/index.html#fundrace" framborder="0"/>
-</div>
-</div><div class="slide" data-transition="none"><div class="content full-page googlemap_perf3" ref="performance/01_performance/14">
+</div><div class="slide" data-transition="none"><div class="content full-page googlemap_perf3" ref="performance/01_performance/13">
 <h1>KML</h1>
 
 <div class="gmaps">
@@ -706,7 +709,7 @@ lay2.setMap(map);</code></pre>
 }());
 </script>
 </div>
-</div><div class="slide" data-transition="none"><div class="content full-page googlemap_perf4" ref="performance/01_performance/15">
+</div><div class="slide" data-transition="none"><div class="content full-page googlemap_perf4" ref="performance/01_performance/14">
 <h1><a href="http://www.google.com/fusiontables/DataSource?dsrcid=693476">Google Fusion Tables (Beta!)</a></h1>
 
 <div class="gmaps">
@@ -742,7 +745,7 @@ lay2.setMap(map);</code></pre>
 </script>
 </div>
 </div><div class="slide" data-transition="none"><div class="content center light-on-dark" ref="wrapup/01_wrapup/1">
-<p><img src="cool.jpg" alt="background"/></p>
+<p><img src="./file/wrapup/cool.jpg" width="1280" height="960" alt="background"/></p>
 
 <h1>5. Cool Examples</h1></div>
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="wrapup/01_wrapup/2">
